# bnnr

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_AUDIT_REPORT.md  LICENSE  README.md  README.pypi.md  RELEASING.md  SECURITY.md  config_quick.yaml  config_quick_stl10.yaml  pyproject.toml  release-please-config.json  run_analyze_demo.py  run_analyze_demo.sh  test_analyze_api.py
.github/: CODEOWNERS  MAINTAINER_SETUP.md  dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark_contribution.yml  bug_report.yml  config.yml  feature_request.yml  integration_request.yml  question.yml  showcase.yml
.github/actions/build-dashboard-frontend/: action.yml
.github/workflows/: bandit.yml  ci.yml  dependency-review.yml  release-please.yml
benchmarks/: .gitignore  README.md  colab_imagewoof.ipynb  colab_resnet50_cifar100.ipynb  dataset_loaders.py  lib.py  metrics_extended.py  reproduce_imagewoof.sh  reproduce_resnet50.sh  results.json  run_benchmarks.py  run_grand_benchmark.py  run_imagewoof.py  run_imagewoof_v2.py  run_resnet50.py  summarize.py  summarize_grand.py  summarize_v2.py  update_readme_table.py
benchmarks/configs/: baseline_only.yaml  bnnr_light.yaml  pilot_fast.yaml
dashboard_web/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
dashboard_web/src/: App.tsx  ThemeContext.tsx  main.tsx  styles.css  taskMetrics.test.ts  taskMetrics.ts  types.ts
dashboard_web/src/components/: AccuracyGainRate.tsx  AugmentationImpact.tsx  AugmentationPreview.tsx  AugmentationStack.tsx  BranchGraph.tsx  CandidateRadar.tsx  ConfusionChord.tsx  ConfusionMatrix.tsx  DatasetInsight.tsx  DecisionLedger.tsx  LossLandscape.tsx  MetricsCharts.tsx  NodeDetailPanel.tsx  NodeTooltip.tsx  PerClassDeltaHeatmap.tsx  PerClassMetrics.tsx  TrainingTimeBreakdown.tsx  XAIInsights.tsx  XAIQualityTrend.tsx
dashboard_web/src/hooks/: useRunState.test.ts  useRunState.ts
docs/: ANALYZE_WOW_PLAN.md  AUDIT_ANALYZE_BRANCH.md  README.md  analyze.md  api_reference.md  artifacts.md  augmentations.md  benchmarks.md  citation.md  cli.md  configuration.md  dashboard.md  detection.md  development.md  ecosystem-outreach.md  examples.md  getting_started.md  golden_path.md  integrations.md  notebooks.md  plugin_icd.md  quickstart_api.md  roadmap.md  troubleshooting.md
docs/assets/: analyze-report-sample.html
examples/: README.md  analyze_colab_quickstart.ipynb  analyze_resnet50.py  bnnr_augmentations_guide.ipynb  bnnr_custom_data.ipynb
examples/classification/: bnnr_classification_demo.ipynb  bnnr_cooking_round1_butterfly.ipynb  demo_full_pipeline.py  icd_plugin_minimal.py  lightning_adapter.py  showcase_stl10.py  torchvision_analyze_cifar10.py
examples/configs/classification/: cifar10_example.yaml  cifar10_quick_smoke.yaml  fashionmnist_example.yaml  imagefolder_example.yaml  mnist_example.yaml  stl10_showcase.yaml
examples/configs/detection/: detection_underwater.yaml  voc_showcase.yaml  yolo_coco128_example.yaml
examples/configs/multilabel/: multilabel_synthetic.yaml
examples/detection/: bnnr_detection_demo.ipynb  showcase_voc.py  showcase_yolo_coco128.py  smoke_yolo_bnnr.py  smoke_yolo_xai_overlay.py
examples/integrations/: README.md  coco128_ultralytics_dataset.py  gradcam_to_icd_loop.py  gradcam_to_saliency_augmentation.ipynb  ultralytics_yolo_quickstart.py
examples/integrations/assets/: IMAGE_CREDITS.md
examples/multilabel/: bnnr_multilabel_demo.ipynb  multilabel_demo.py
scripts/: audit_synthetic_multiclass_analyze.py  generate_analyze_sample_report.py  readme_capture_dashboard.py  run_classification_multilabel_smoke.sh  validate_user_notebooks.py
security/: pip-audit-allowlist.txt
src/bnnr/: __init__.py  __main__.py  adapter.py  albumentations_aug.py  analyze.py  augmentation_runner.py  augmentations.py  cli.py  config.py  config_model.py  console.py  core.py  craft.py  data_quality.py  detection_adapter.py  detection_augmentations.py  detection_collate.py  detection_icd.py  detection_metrics.py  detection_xai.py  evaluation.py  events.py  example_data.py  icd.py  kornia_aug.py  path_security.py  pipelines.py  presets.py  quick_run.py  reporting.py  trainer.py  utils.py  version.py  xai.py  xai_analysis.py  xai_cache.py
src/bnnr/analysis/: __init__.py  calibration.py  class_diagnostics.py  cross_validation.py  findings.py  html_report.py  recommendations.py  schema.py
src/bnnr/dashboard/: __init__.py  backend.py  constants.py  exporter.py  serve.py
src/bnnr/training/: augmentation_batch.py  checkpoint.py  image_utils.py  loop.py  probe.py  xai_runner.py
tests/: __init__.py  conftest.py  test_analyze.py  test_augmentations.py  test_backward_compat.py  test_benchmarks.py  test_bnnr_comprehensive.py  test_cli_demo.py  test_cli_extended.py  test_config.py  test_config_extended.py  test_console.py  test_contracts.py  test_core.py  test_core_extended.py  test_craft_real.py  test_custom_metrics.py  test_dashboard_backend.py  test_dashboard_export.py  test_dashboard_frontend_source.py  test_dashboard_path_security.py  test_dashboard_serve.py  test_data_quality.py  test_detection.py  test_detection_adapter.py  test_detection_augmentations.py  test_detection_coverage_gaps.py  test_detection_xai.py  test_device_handling.py  test_events.py  test_example_data.py  test_gpu_augmentations.py  test_gradcam_to_icd_loop.py  test_icd.py  test_icd_plugin_minimal.py  test_integration.py  test_lan_access.py  test_lazy_cv2_import.py  test_lazy_sklearn_import.py  test_metric_averaging.py  (+19 more)
tests/integration/: smoke_yolo_xai_overlay.py
