[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bnnr"
version = "0.1.0.post3"
description = "BNNR — Train → Explain → Improve → Prove"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
  { name = "Mateusz Walo" },
  { name = "Diana Morzhak" },
  { name = "Dominika Zydorczyk" },
  { name = "Zuzanna Saczuk" },
]
keywords = [
  "deep-learning",
  "pytorch",
  "computer-vision",
  "xai",
  "explainability",
  "augmentation",
  "training",
  "saliency-maps",
  "grad-cam",
  "opticam",
  "model-quality",
  "automated-ml",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
  "torch>=2.0.0,<3.0",
  "torchvision>=0.15.0,<1.0",
  "numpy>=1.24.0,<3.0",
  "opencv-python>=4.8.0,<5.0",
  "pydantic>=2.0.0,<3.0",
  "eval-type-backport>=0.2.0; python_version < '3.10'",
  "typer>=0.9.0,<1.0",
  "pyyaml>=6.0.0,<7.0",
  "tqdm>=4.65.0,<5.0",
  "grad-cam>=1.5.4,<2.0",
  "scikit-learn>=1.3.0,<2.0",
]

[project.optional-dependencies]
gpu = [
  "kornia>=0.7.0,<1.0",
]
albumentations = [
  "albumentations>=1.3.0,<2.0",
]
dashboard = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "websockets>=12.0",
  "qrcode>=7.0",
]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "httpx>=0.27.0",
  "ruff>=0.1.0",
  "mypy>=1.0.0",
  "types-PyYAML>=6.0.12",
  "pre-commit>=3.0.0",
  "playwright>=1.40.0",
]

[project.scripts]
bnnr = "bnnr.cli:main"

[project.urls]
Homepage = "https://github.com/bnnr-team/bnnr"
Repository = "https://github.com/bnnr-team/bnnr"
Issues = "https://github.com/bnnr-team/bnnr/issues"
Documentation = "https://github.com/bnnr-team/bnnr/tree/main/docs"
Changelog = "https://github.com/bnnr-team/bnnr/blob/main/CHANGELOG.md"

# Default sdist respects .gitignore; UI build output must still land in the tarball.
[tool.hatch.build.targets.sdist.force-include]
"src/bnnr/dashboard/frontend/dist" = "src/bnnr/dashboard/frontend/dist"

[tool.hatch.build.targets.wheel]
packages = ["src/bnnr"]
# Wheel is often built from sdist; map packaged tree → site-packages layout.
[tool.hatch.build.targets.wheel.force-include]
"src/bnnr/dashboard/frontend/dist" = "bnnr/dashboard/frontend/dist"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "UP007", "UP045"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["import-untyped", "var-annotated"]

[[tool.mypy.overrides]]
module = [
  "bnnr.augmentations",
  "bnnr.xai",
  "bnnr.icd",
  "bnnr.xai_cache",
  "bnnr.utils",
  "bnnr.kornia_aug",
  "bnnr.augmentation_runner",
  "bnnr.craft",
  "bnnr.data_quality",
]
# numpy/opencv return types are inherently Any; narrow ignore.
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = ["torch.*"]
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=bnnr --cov-report=term-missing"
