[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bnnr"
version = "0.5.1"
description = "BNNR: XAI-driven augmentation & diagnostics for PyTorch vision - find model failures, fix with saliency-guided augmentation (ICD/AICD), prove with auditable reports."
readme = "README.pypi.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Mateusz Walo" },
  { name = "Diana Morzhak" },
  { name = "Dominika Zydorczyk" },
  { name = "Zuzanna Saczuk" },
]
keywords = [
  "deep-learning",
  "pytorch",
  "computer-vision",
  "xai",
  "explainability",
  "augmentation",
  "training",
  "saliency-maps",
  "grad-cam",
  "opticam",
  "model-quality",
  "automated-ml",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
  # Floor raised to 2.10.0: torch <2.9.1 / <2.10.0 carry memory-corruption
  # advisories (CVE-2025-2999 unpack_sequence, CVE-2025-3001 lstm_cell), fixed
  # in 2.9.1 / 2.10.0 respectively.
  "torch>=2.10.0,<3.0",
  "torchvision>=0.15.0,<1.0",
  "numpy>=1.24.0,<3.0",
  "opencv-python>=4.8.0,<5.0",
  "pydantic>=2.0.0,<3.0",
  "typer>=0.9.0,<1.0",
  "click>=8.0.0,<9.0",
  "pyyaml>=6.0.0,<7.0",
  "tqdm>=4.65.0,<5.0",
  "grad-cam>=1.5.4,<2.0",
  "scikit-learn>=1.3.0,<2.0",
]

[project.optional-dependencies]
gpu = [
  "kornia>=0.7.0,<1.0",
]
albumentations = [
  "albumentations>=1.3.0,<3.0",
]
ultralytics = [
  "ultralytics>=8.3.0,<9.0",
]
dashboard = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "websockets>=12.0",
  "qrcode>=7.0",
]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "httpx>=0.27.0",
  "ruff>=0.1.0",
  "mypy>=1.0.0",
  "types-PyYAML>=6.0.12",
  "pre-commit>=3.0.0",
  "playwright>=1.40.0",  # README dashboard screenshots (scripts/readme_capture_dashboard.py)
  "ultralytics>=8.3.0,<9.0",
  "pip-audit>=2.7.0",
  "bandit>=1.8.0",
]

[project.scripts]
bnnr = "bnnr.cli:main"

[project.urls]
Homepage = "https://github.com/bnnr-team/bnnr"
Repository = "https://github.com/bnnr-team/bnnr"
Issues = "https://github.com/bnnr-team/bnnr/issues"
Documentation = "https://github.com/bnnr-team/bnnr/tree/main/docs"
Changelog = "https://github.com/bnnr-team/bnnr/blob/main/CHANGELOG.md"
Zenodo = "https://doi.org/10.5281/zenodo.20581372"
Paper = "https://doi.org/10.5281/zenodo.20581077"

[tool.uv]
constraint-dependencies = [
  "filelock>=3.20.3",
  "pygments>=2.20.0",
  "pillow>=12.2.0",
]

# Default sdist respects .gitignore; UI build output must still land in the tarball.
[tool.hatch.build.targets.sdist.force-include]
"src/bnnr/dashboard/frontend/dist" = "src/bnnr/dashboard/frontend/dist"

[tool.hatch.build.targets.wheel]
packages = ["src/bnnr"]
# frontend/dist lands in the wheel automatically: python -m build creates the
# wheel from the sdist (which force-includes frontend/dist), so packages =
# ["src/bnnr"] picks the files up without a separate force-include.  A second
# force-include would create duplicate ZIP entries rejected by PyPI.

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "UP007", "UP045"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["import-untyped", "var-annotated"]

[[tool.mypy.overrides]]
module = [
  "bnnr.augmentations",
  "bnnr.xai",
  "bnnr.icd",
  "bnnr.xai_cache",
  "bnnr.utils",
  "bnnr.kornia_aug",
  "bnnr.augmentation_runner",
  "bnnr.craft",
  "bnnr.data_quality",
  "bnnr.detection_xai",
  "bnnr.detection_adapter",
  "bnnr.detection_metrics",
  "bnnr.detection_augmentations",
  "bnnr.detection_icd",
]
# numpy/opencv return types are inherently Any; narrow ignore.
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = ["torch.*"]
follow_imports = "skip"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
# ML/dashboard patterns reviewed; fail CI only on new High findings (see ci.yml -lll).
skips = [
  "B101",  # assert
  "B104",  # bind 0.0.0.0 — local dashboard default
  "B112",  # try/except/continue in dataset iteration
  "B311",  # random — augmentation RNG, not crypto
  "B404",  # subprocess import — dashboard npm build
  "B602",  # shell=True only on Windows for npm.cmd
  "B607",  # npm on PATH
  "B614",  # torch.load — user checkpoints by design
  "B310",  # curated example_data download URL
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=bnnr --cov-report=term-missing"
markers = [
    "yolo26: BNNR + yolo26n.pt (must pass on GitHub Actions; may skip locally).",
]
